...
				}
			).font(.title)
			Divider()
			MobiledocEditor(mobiledoc: $post.mobiledoc, showImagePicker: $showImagePicker, newCardPayload: $newCardPayload)
			.imagePicker(isPresented: $showImagePicker) { imageInfo in
				var payload = [
					"type": "image",
					"src": imageInfo.imageURL,
				]
				if let attribution = imageInfo.attribution {
					payload["caption"] = attribution.htmlAttribution
				}
				self.newCardPayload = payload
...
				}, label: {
					Image(systemName: .gear).imageScale(.large)
				})
				.sheet(isPresented: $showOptionsSheet) {
					OptionsView(post: self.post)
				}
				.accessibility(label: Text("options"))
			}
		)
		.navigationBarTitle("", displayMode: .inline)
		.padding()
		.onAppear {
			if !self.post.new {
...
