...
				self.authManager.session = nil
				self.contentManager.posts = []
				UserDefaults.standard.removeObject(forKey: "sessionCookie")
			}
		}, label: {
			Text(self.authManager.session == nil ? "Sign in" : "Sign out")
		}).accessibility(label: Text("setup"))
	}

	var composeButton: some View {
		NavigationLink(destination: PostView()) {
			Image(systemName: .squareAndPencil).imageScale(.large)
		}
...
